<resources>
    <string name="app_name">Transferee</string>
    <!-- Menu strings-->
    <string name="title_home">Home</string>
    <string name="title_transfers">Transfers</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>

    <!-- Titles -->
    <string name="top_rated_players">Top rated players</string>
    <string name="top_market_value_players">Top market value players</string>
    <string name="latest_transfers">Latest transfers</string>
    <string name="search_players">Search players</string>
    <string name="search_results">Search results</string>
    <string name="your_favorites">Your favorites</string>
    <string name="overview">Overview</string>
    <string name="position">Position</string>
    <string name="matches">Matches</string>
    <string name="price_changes">Price changes</string>
    <string name="titles">Titles</string>
    <string name="transfers">Transfers</string>

    <!-- Other strings-->
    <string name="rating">Rating:</string>
    <string name="value">Value:</string>
    <string name="market_value_formatted_float">€%1$fm</string>
    <string name="market_value_formatted_integer">€%1$dm</string>
    <string name="market_value_formatted_string">€%1$sm</string>
    <string name="fee">Fee:</string>
    <string name="contract">Contract:</string>
    <string name="market_value">Market value:</string>
    <string name="contract_date">%1$s - %2$s</string>
    <string name="enter_at_least">Enter at least 3 characters to search</string>
    <string name="height">Height</string>
    <string name="shirt_number">Shirt number</string>
    <string name="preferred_foot">Preferred foot</string>
    <string name="country">Country</string>
    <string name="pseudonym">Pseudonym</string>
    <string name="primary">Primary</string>
    <string name="others">Others</string>
    <string name="current_price">Current price</string>
    <string name="last_price_change">Last price change</string>
    <string name="previous">Previous:</string>
    <string name="new_label">New:</string>
    <string name="worldwide_price">Worldwide price</string>
    <string name="country_price">Country price</string>
    <string name="goals_with_semicolon">Goals:</string>
    <string name="assists_with_semicolon">Assists:</string>
    <string name="position_with_semicolon">Position:</string>
    <string name="yellow_card_with_semicolon">Yellow card:</string>
    <string name="red_card_with_semicolon">Red card:</string>
    <string name="minutes_played_with_semicolon">Minutes played:</string>
    <string name="unable_to_load_data">Unable to load data</string>
    <string name="no_players_found">No players found</string>
    <string name="player_height">%1$dcm</string>
    <string name="player_age">%1$d years</string>
    <string name="no_favorites_players">You don\'t have favorite players</string>
    <string name="dash">-</string>
    <string name="no_matches_to_display">No matches to display</string>
    <string name="fc_none">FC None</string>
    <string name="cool_player">Cool player</string>
    <string name="birth_date_placeholder">Jan 1, 1900</string>

    <!--Test strings-->
    <string name="bruno">Bruno Fernandes</string>
    <string name="manchester_united">Manchester United</string>
    <string name="rating_mark">8.05</string>
    <string name="market_value_number">€120m</string>
    <string name="yesterday">Yesterday</string>
    <string name="sporting">Sporting</string>
    <string name="test_contract_date">Jan 2020 - Jun 2023</string>
    <string name="portugal">Portugal</string>
    <string name="height_value">1.79m</string>
    <string name="age_value">26 years</string>
    <string name="date_of_birth_value">Sep 8, 1994</string>
    <string name="player_shirt_value">18</string>
    <string name="preferred_foot_value">Right</string>
    <string name="pseudonym_value">Bruno Miguel Borges Fernandes</string>
    <string name="primary_position_value">Center Attacking Midfielder</string>
    <string name="others_position_value">Center Midfielder</string>
    <string name="last_price_change_value">17 Dec 2020</string>
    <string name="previous_market_value">€80m</string>
    <string name="first">1st</string>
    <string name="last_10_matches">Last 10 matches</string>
    <string name="four">4</string>
    <string name="everton">Everton</string>
    <string name="match_score">3 : 1</string>
    <string name="cam">CAM</string>
    <string name="minute_value">50\'</string>
</resources>