<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/player_block_shape"
    android:layout_marginBottom="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchDateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/GrayRegularTextStyle"
        android:text="@string/last_price_change_value"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/matchDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/matchClubImageView"
        android:src="@drawable/everton"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/matchClubImageView"
        android:gravity="center"
        style="@style/PlayerTitleStyle"
        android:textSize="24sp"
        android:text="@string/everton"
        android:id="@+id/matchClubTextView"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/matchClubTextView"
        android:gravity="center"
        style="@style/TitlesStyle"
        android:text="@string/match_score"
        android:id="@+id/matchScoreTextView"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchPlayerGoalsContainer"
        app:layout_constraintTop_toBottomOf="@id/matchScoreTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/matchPlayerAssistsContainer"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GraySemiBoldTextStyle"
            android:textSize="18sp"
            android:text="@string/goals_with_semicolon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitlesStyle"
            android:text="@string/four"
            android:layout_marginStart="4dp"
            android:id="@+id/matchPlayerGoalsTextView"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchPlayerAssistsContainer"
        app:layout_constraintTop_toBottomOf="@id/matchScoreTextView"
        app:layout_constraintStart_toEndOf="@id/matchPlayerGoalsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GraySemiBoldTextStyle"
            android:textSize="18sp"
            android:text="@string/assists_with_semicolon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitlesStyle"
            android:text="@string/four"
            android:layout_marginStart="4dp"
            android:id="@+id/matchPlayerAssistsTextView"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/matchPlayerAssistsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/matchPlayerPositionContainer"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/GraySemiBoldTextStyle"
                android:text="@string/position_with_semicolon"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitlesStyle"
                android:text="@string/cam"
                android:layout_marginStart="5dp"
                android:id="@+id/matchPlayerPositionTextView"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchPlayerYellowCardContainer"
        app:layout_constraintTop_toBottomOf="@id/matchPlayerPositionContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/matchPlayerRedCardContainer"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GraySemiBoldTextStyle"
            android:textSize="18sp"
            android:text="@string/yellow_card_with_semicolon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitlesStyle"
            android:text="@string/minute_value"
            android:layout_marginStart="4dp"
            android:id="@+id/matchPlayerYellowCardTextView"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matchPlayerRedCardContainer"
        app:layout_constraintTop_toBottomOf="@id/matchPlayerPositionContainer"
        app:layout_constraintStart_toEndOf="@id/matchPlayerYellowCardContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GraySemiBoldTextStyle"
            android:textSize="18sp"
            android:text="@string/red_card_with_semicolon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitlesStyle"
            android:text="@string/minute_value"
            android:layout_marginStart="4dp"
            android:id="@+id/matchPlayerRedCardTextView"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/matchPlayerRedCardContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/matchPlayerMinutesPlayedContainer"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GraySemiBoldTextStyle"
            android:text="@string/minutes_played_with_semicolon"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitlesStyle"
            android:text="@string/minute_value"
            android:layout_marginStart="5dp"
            android:id="@+id/matchPlayerMinutesPlayedTextView"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@drawable/green_block_rounded_big"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/matchPlayerMinutesPlayedContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/matchPlayerRatingTextView"
            style="@style/WhiteSemiBoldTextStyle"
            android:textSize="20sp"
            android:text="@string/rating_mark"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>