<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/player_block_shape"
    android:id="@+id/transferContainer"
    android:layout_marginBottom="10dp"
    >
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/transferPlayerImageView"
        android:src="@drawable/bruno"
        app:layout_constraintEnd_toEndOf="@id/transferContainer"
        app:layout_constraintStart_toStartOf="@id/transferContainer"
        app:layout_constraintTop_toTopOf="@id/transferContainer"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transferDateTextView"
        android:text="@string/yesterday"
        style="@style/GrayRegularTextStyle"
        app:layout_constraintEnd_toEndOf="@id/transferContainer"
        app:layout_constraintTop_toTopOf="@id/transferContainer"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transferPlayerName"
        app:layout_constraintTop_toBottomOf="@id/transferPlayerImageView"
        app:layout_constraintStart_toStartOf="@id/transferContainer"
        app:layout_constraintEnd_toEndOf="@id/transferContainer"
        android:text="@string/bruno"
        style="@style/PlayerTitleStyle"
        android:textSize="20sp"
        android:ellipsize="end"
        android:maxLines="1"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/departureClubTextView"
            app:layout_constraintBottom_toBottomOf="@id/departureClubImageView"
            app:layout_constraintEnd_toStartOf="@id/departureClubImageView"
            android:text="@string/sporting"
            style="@style/WhiteSemiBoldTextStyle"
            app:layout_constraintTop_toBottomOf="@id/transferPlayerName"
            android:textColor="@color/gray"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            />
        <ImageView
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:id="@+id/departureClubImageView"
            app:layout_constraintTop_toBottomOf="@id/transferPlayerName"
            app:layout_constraintEnd_toStartOf="@id/transferIcon"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/sporting"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="4dp"
            android:id="@+id/transferIcon"
            android:src="@drawable/ic_arrow_right_outline_24"
            app:layout_constraintStart_toStartOf="@id/transferContainer"
            app:layout_constraintEnd_toEndOf="@id/transferContainer"
            app:layout_constraintBottom_toBottomOf="@id/departureClubImageView"
            app:layout_constraintTop_toBottomOf="@id/transferPlayerName"
            />
        <ImageView
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:id="@+id/joiningClubImageView"
            app:layout_constraintStart_toEndOf="@id/transferIcon"
            app:layout_constraintTop_toBottomOf="@id/transferPlayerName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/manchesterunitedsmall"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/joiningClubTextView"
            app:layout_constraintStart_toEndOf="@id/joiningClubImageView"
            app:layout_constraintBottom_toBottomOf="@id/departureClubImageView"
            android:text="@string/manchester_united"
            style="@style/WhiteSemiBoldTextStyle"
            app:layout_constraintTop_toBottomOf="@id/transferPlayerName"
            android:textColor="@color/gray"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/departureClubImageView"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:id="@+id/feeContractContainer"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fee"
                style="@style/WhiteSemiBoldTextStyle"/>
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/green_block_rounded"
                android:orientation="horizontal"
                android:paddingHorizontal="6dp"
                android:paddingVertical="3dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/feeTextView"
                    style="@style/WhiteSemiBoldTextStyle"
                    android:text="@string/market_value_number"
                    android:textAlignment="center"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contract"
                style="@style/WhiteSemiBoldTextStyle"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/transferContractTextView"
                android:text="@string/test_contract_date"
                style="@style/GrayRegularTextStyle"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feeContractContainer"
        android:layout_marginTop="4dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_value"
            style="@style/WhiteSemiBoldTextStyle"
            />
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/red_block_rounded"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:paddingVertical="3dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/marketValueTextView"
                style="@style/WhiteSemiBoldTextStyle"
                android:text="@string/market_value_number"
                android:textAlignment="center"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>