<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/player_block_shape"
    android:layout_marginBottom="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/priceChangeDateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/GrayRegularTextStyle"
        android:text="@string/last_price_change_value"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priceChangeDateTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/centralIconsContainer"
        android:id="@+id/previousPriceContainer"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GrayRegularTextStyle"
            android:textSize="18sp"
            android:text="@string/previous"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previousPriceTextView"
            style="@style/PlayerTitleStyle"
            android:text="@string/previous_market_value"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priceChangeDateTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:id="@+id/centralIconsContainer"
        android:gravity="center_horizontal"
        >
            <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:id="@+id/priceArrowImageView"
                android:src="@drawable/ic_arrow_up_main_green"
                />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/priceChangeClubImageView"
            android:src="@drawable/manchesterunitedsmall"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/centralIconsContainer"
        app:layout_constraintTop_toBottomOf="@id/priceChangeDateTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GrayRegularTextStyle"
            android:textSize="18sp"
            android:text="@string/new_label"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newPriceTextView"
            style="@style/PlayerTitleStyle"
            android:text="@string/market_value_number"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>